GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Andrew_Id__c.field-meta.xml
<CustomField>
    <fullName>Andrew_Id__c</fullName>
    <label>Andrew Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>