GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <length>11</length>
    <type>Text</type>
</CustomField>