GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>