GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Card_Id__c</fullName>
    <label>Card_Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>