GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>