GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Level__c</fullName>
    <label>Class Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>