GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Class_Year__c.field-meta.xml
<CustomField>
    <fullName>Class_Year__c</fullName>
    <label>Class Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>