GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Directory_Flag__c.field-meta.xml
<CustomField>
    <fullName>Directory_Flag__c</fullName>
    <label>Directory Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>