GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Education_Updated__c.field-meta.xml
<CustomField>
    <fullName>Education_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Updated</label>
    <type>Checkbox</type>
</CustomField>