GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>