GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Foreign_Phone__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Phone__c</fullName>
    <label>Foreign Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>