GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Fraternity__c.field-meta.xml
<CustomField>
    <fullName>Fraternity__c</fullName>
    <label>Fraternity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>