GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>