GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Home_Address2__c.field-meta.xml
<CustomField>
    <fullName>Home_Address2__c</fullName>
    <label>Home Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>