GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <label>Home City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>