GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Home_Foreign_Zip__c.field-meta.xml
<CustomField>
    <fullName>Home_Foreign_Zip__c</fullName>
    <label>Home Foreign Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>