GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>