GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip__c</fullName>
    <label>Home Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>