GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Local_Address2__c.field-meta.xml
<CustomField>
    <fullName>Local_Address2__c</fullName>
    <label>Local Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>