GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Local_City__c.field-meta.xml
<CustomField>
    <fullName>Local_City__c</fullName>
    <label>Local City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>