GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Local_Phone__c.field-meta.xml
<CustomField>
    <fullName>Local_Phone__c</fullName>
    <label>Local Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>