GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Local_State__c.field-meta.xml
<CustomField>
    <fullName>Local_State__c</fullName>
    <label>Local State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>