GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Local_Zip__c.field-meta.xml
<CustomField>
    <fullName>Local_Zip__c</fullName>
    <label>Local Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>