GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>