GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Matched_Education__c.field-meta.xml
<CustomField>
    <fullName>Matched_Education__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Education</label>
    <referenceTo>AQB__Education__c</referenceTo>
    <relationshipLabel>SIS Students</relationshipLabel>
    <relationshipName>SIS_Students</relationshipName>
    <type>Lookup</type>
</CustomField>