GoalTracker/force-app/main/default/objects/SIS_Student__c/fields/Student_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_System_Id__c</fullName>
    <label>Student System Id</label>
    <length>7</length>
    <type>Text</type>
</CustomField>