GoalTracker/force-app/main/default/objects/SIS_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Matched_Education__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>