GoalTracker/force-app/main/default/objects/SIS_Student__c/listViews/Matched_Students.listView-meta.xml
<ListView>
    <fullName>Matched_Students</fullName>
    <columns>NAME</columns>
    <columns>Matched_Education__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Matched_Education__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Matched Students</label>
</ListView>