GoalTracker/force-app/main/default/objects/SIS_Student__c/listViews/Student_Errors.listView-meta.xml
<ListView>
    <fullName>Student_Errors</fullName>
    <columns>NAME</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Errors__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Student Load Errors</label>
</ListView>