GoalTracker/force-app/main/default/objects/SIS_Student__c/listViews/Updated_Students.listView-meta.xml
<ListView>
    <fullName>Updated_Students</fullName>
    <columns>NAME</columns>
    <columns>Matched_Education__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Education_Updated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Updated Students</label>
</ListView>